# diffx-python

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  examples.py  pyproject.toml  test_integration.py  test_manual.py
.github/workflows/: release.yml
src/: lib.rs
src/diffx_python/: __init__.py  diffx.py
tests/: __init__.py  test_diff.py  test_format.py  test_parsers.py  test_unified_api.py
