[package]
name = "diffx-python"
version = "0.6.0"
edition = "2021"
authors = ["kako-jun"]
license = "MIT"
description = "Python bindings for diffx - unified API for semantic diff operations"

[lib]
name = "diffx_python"
crate-type = ["cdylib"]

[dependencies]
# Core diffx functionality
diffx-core = { workspace = true }

# PyO3 for Python bindings
pyo3 = { workspace = true }

# Other dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }