[package]
name = "diffx-python"
version = "0.6.1"
edition = "2021"
description = "Python bindings for diffx - semantic diffing of JSON, YAML, TOML, XML, INI, and CSV files"
license = "MIT"
repository = "https://github.com/kako-jun/diffx-python"
authors = ["kako-jun"]

[lib]
name = "diffx_python"
crate-type = ["cdylib"]

[dependencies]
# Core diffx functionality
diffx-core = "0.6.1"

# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.0"

[dev-dependencies]
# Tests only (pre-commit handles linting)
