[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "diffx-python"
version = "0.6.1"
description = "Python bindings for diffx - semantic diffing of JSON, YAML, TOML, XML, INI, and CSV files. Powered by Rust for blazing fast performance."
readme = "README.md"
license = "MIT"
authors = [
    { name = "kako-jun" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]
keywords = [
    "diff",
    "json",
    "yaml",
    "toml",
    "xml",
    "ini",
    "csv",
    "structured",
    "semantic",
    "comparison",
    "devops",
    "ci-cd",
    "automation",
    "data-analysis",
    "pyo3",
    "rust"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/kako-jun/diffx-python"
Repository = "https://github.com/kako-jun/diffx-python"
Issues = "https://github.com/kako-jun/diffx-python/issues"
Documentation = "https://github.com/kako-jun/diffx-python#readme"

[project.optional-dependencies]
dev = [
    "pytest >= 6.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff"
]

[tool.maturin]
bindings = "pyo3"
find-interpreter = true
compatibility = "manylinux2014"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[dependency-groups]
dev = [
    "maturin>=1.9.1",
    "pytest>=6.0",
    "pre-commit>=3.0",
]
